# waveform-generator

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: build.yml  nox.yml  tests.yml
src/waveform_generator/: __init__.py  pulse_sequence.py  pulses.py  staircase_sweep.py  triangular_sweep.py  utils.py  waveform.py
tests/: test_pulse.py  test_usage.py
