[project]
name = "waveform-generator"
version = "0.1.0"
description = "Library for generating customizable waveforms and pulse sequences for signal processing applications"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
tests = [
    "coverage>=7.6.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.5",
]
dev = [
    "ipykernel>=6.29.5",
    "nox>=2025.5.1",
]

[tool.ruff]
line-length = 120

[tool.coverage.run]
source = [
    "waveform_generator",
]
parallel = true

[tool.coverage.paths]
source = [
    "src",
    # blank line to avoid reordering 
    "*/site-packages",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
