[project]
name = "waveform-generator"
dynamic = [
    "version",
]
description = "Library for generating customizable waveforms and pulse sequences for signal processing applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
]

[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/waveform_generator/_version.py"

[project.optional-dependencies]
tests = [
    "coverage>=7.6.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.5",
]
dev = [
    "ipykernel>=6.29.5",
    "nox>=2025.5.1",
]

[tool.ruff]
line-length = 120

[tool.coverage.run]
source = [
    "waveform_generator",
]
parallel = true

[tool.coverage.paths]
source = [
    "src",
    # blank line to avoid reordering 
    "*/site-packages",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
